kafka-spring/kubernetes/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devoxx-ingress
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    # konghq.com/plugins: rate-free-tier
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devoxx-spring-kafka
                port:
                  number: 8080
